# sophia

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
notebooks/: gpt2_train.ipynb
src/sophia/configs/: gpt2.py  gpt2_config.py
src/sophia/data/: base.py  data_loader.py
src/sophia/data_loader/: base.py
src/sophia/model/: base.py  builder.py  config.py  graph.py  registry.py
src/sophia/model/blocks/: bases.py  transformer_block.py
src/sophia/model/config/: activation.py  attention.py  base.py  embeddings.py  feed_forward.py  normalization.py  projection.py  transformer_block.py
src/sophia/model/layers/: activations.py  attentions.py  bases.py  embeddings.py  feed_forwards.py  gelu.py  (+4 more)
src/sophia/trainer/: base.py  trainer.py
tests/test_configs/: test_gpt2.py  test_gpt2_config.py
tests/test_data/: test_data_loader.py
tests/test_model/: test_builder.py  test_config.py  test_registry.py
tests/test_model/test_blocks/: test_transformer_block.py
tests/test_model/test_config/: test_activation.py  test_activation_config.py  test_attention.py  test_embedding.py  test_embedding_config.py  test_feed_forward_config.py  test_normalization.py  test_normalization_config.py  test_projection_config.py  test_transformer_block.py  test_transformer_block_config.py
tests/test_model/test_layers/: test_activations.py  test_attentions.py  test_embeddings.py  test_feed_forwards.py  test_gelu.py  test_normalizations.py  test_projections.py  test_transformer_block.py
tests/test_trainer/: test_trainer.py
